--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <!-- jumbotron -->
     <div class="firstcube">
         <img src="img/banner.jpg" alt="banner" class="banner">
+        <div class="containimage">
+            <p class="big">Pretium ac placerat bla bla bla bla blablab <br> blablablablabla</p>
+            <p class="small">pretium blablabla bla scritta più puiccolina <br> bla bla bla bla blablablablablas</p>
+        </div>
         
+
 
 
     </div>
@@ -38,18 +43,36 @@
         
         <div class="container">
 
-            <div class="cubosopra"></div>
-            <aside class="side"></aside>
-            <div class="centre"></div>
-            <aside class="side"></aside>
+            <div class="cubosopra">
+               <h1>Leadership</h1>
+               <p>Fertenum urna libera tempus</p>
+            </div>
 
+            <aside class="side">
+                <img src="img/img-1.jpg" alt="" class="imagealbero">
+                <p><strong>Lorem</strong> </p>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
+            </aside>
+
+            <div class="centre">
+                <img src="img/banner-2.jpg" alt="" class="imagetazza">
+                <p><strong>Lorem</strong> </p>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </div>
+
+            <aside class="side">
+                <img src="img/img-3.jpg" alt="" class="imagelampadina">
+                <p><strong>Lorem</strong> </p>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            </aside>
         </div>
 
     </main>
 
     <!-- parte finale -->
     <footer>
+        <p class="designed">Designed with <span>&#9825;</span></p>
 
     </footer>
 
